--- a/lib/global.css
+++ b/lib/global.css
@@ -1,3 +1,12 @@
+@font-face {
+  font-family: 'mash-poppins-medium';
+  src: url("./assets/font/Poppins-Medium.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: 'mash-Poppins-SemiBold';
+  src: url("./assets/font/Poppins-SemiBold.ttf") format("truetype");
+}
 @import 'tailwindcss';
 
 .responsive-flex-3 {
